--- a/SlackCoffee/appsettings.json
+++ b/SlackCoffee/appsettings.json
@@ -6,5 +6,18 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "Slack": {
+    "Workspaces": [
+      {
+        "Name": "",
+        "SigningSecret": "",
+        "OAuthAccessToken": "",
+        "Channels": {
+          "manager": "",
+          "user": ""
+        }
+      }
+    ]
+  },
   "AllowedHosts": "*"
 }
