--- a/SlackCoffee/SlackCoffee.csproj
+++ b/SlackCoffee/SlackCoffee.csproj
@@ -22,5 +22,9 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\SlackBot\SlackBot\SlackBot\SlackBot.csproj" />
+  </ItemGroup>
+
 
 </Project>
